[package]
name = "todo-list_base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }